<resources>
    <string name="app_name">CobroDigital</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Transacciones">Transacciones</string>
    <string name="Configuracion">Configuraciòn</string>
    <string name="Crear_Pagador">Crear Pagador</string>
    <string name="font_awesome_android_icon">&#xf17b;</string>
    <string name="font_awesome_area_chart_icon">&#xf1fe;</string>
    <string name="font_awesome_cubes_icon">&#xf1b3;</string>
    <string name="font_awesome_mobile_phone_icon">&#xf10b;</string>
    <string name="font_awesome_group_icon">&#xf0c0;</string>
    <string name="from_date">Fecha Desde</string>
    <string name="to_date">Fecha Hasta</string>
    <string name="hint_password">escriba aqui...</string>
    <string name="saldo">Saldo</string>
    <string name="ver_mas_movimientos">Ver Mas movimientos</string>
    <string name="aaa">aaa</string>
    <string name="con_ctate_con_tu_cuenta">Conéctate con tu cuenta</string>
    <string name="cobrodigital_s_r_l">CobroDigital S.R.L.</string>
    <string name="atencionaclientes_cobrodigital_coms">atencionaclientes@cobrodigital.coms</string>
    <string name="cobrodigital">Cobrodigital</string>
    <string name="title_activity_boletas">Boletas</string>
    <string name="aceptar">Aceptar</string>
    <string name="campo_a_buscar">Campo a buscar</string>
    <string name="cancelar">Cancelar</string>
    <string name="apellido">Apellido</string>
    <string name="documento">Documento</string>
    <string name="direccion">Direccion</string>
    <string name="correo">E-mail</string>
    <string name="concepto">Concepto</string>
    <string name="fecha_1er_vto">Fecha 1er vto</string>
    <string name="fecha_vto">Fecha vto</string>
    <string name="fecha_2do_vto">Fecha 2do vto</string>
    <string name="fecha_3er_vto">Fecha 3er vto</string>
    <string name="importe">Importe</string>
    <string name="importe_1">Importe 1</string>
    <string name="importe_2">Importe 2</string>
    <string name="importe_3">Importe 3</string>
    <string name="nombre">Nombre</string>
    <string name="valor">Valor</string>
    <string name="enviar">Enviar</string>

    <string name="notificacion_notification_title_template">Notificacion: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="notificacion_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detalle_transacciones">detalle_transacciones</string>
    <string name="title_activity_detalle__transacciones">Detalle_Transacciones</string>
    <string name="title_activity_enviar_correo">Enviar_correo</string>
    <string name="title_activity_estado_cuenta">Estado_cuenta</string>
    <string name="title_activity_retiro_importe">Importe de Retiro</string>
    <string name="title_activity_retiro">Iniciar Retiro</string>
    <string name="title_activity_cobrar_por_correo">Cobrar por Correo</string>
</resources>
