<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_boletas"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_marginBottom="25dp"
    tools:context="com.cobrodigital.com.cobrodigital2.Modulos.Boletas.Boletas"
    tools:ignore="ExtraText"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/progressbar_Boleta"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Generando Boleta Espere..."/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mensaje_cobrarxcorreo"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/cobrarxcorreo_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Boleta generada y enviada con exito."/>
        <TextView
            android:id="@+id/cobrarxcorreo_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="No se ha podido generar y enviar la boleta."/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/vista_cobxcorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/Nombre_cobxcorreo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="textPersonName"
            android:ems="10"
            tools:ignore="MissingConstraints"
            android:maxLines="1"
            android:hint="@string/nombre"/>
        <EditText
            android:id="@+id/apellido_cobxcorreo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:inputType="textPersonName"
            android:ems="10"
            tools:ignore="MissingConstraints"
            android:maxLines="1"
            android:hint="@string/apellido"/>
        <EditText
            android:id="@+id/documento_cobxcorreo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:inputType="number"
            android:ems="10"
            tools:ignore="MissingConstraints"
            android:maxLines="1"
            android:hint="@string/documento"/>
        <EditText
            android:id="@+id/direccion_cobxcorreo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:inputType="textAutoComplete"
            android:ems="10"
            tools:ignore="MissingConstraints"
            android:maxLines="1"
            android:hint="@string/direccion"/>
        <EditText
            android:id="@+id/correo_cobxcorreo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:ems="10"
            tools:ignore="MissingConstraints"
            android:maxLines="1"
            android:hint="@string/correo"/>
        <EditText
            android:id="@+id/concepto_cobxcorreo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:inputType="textAutoComplete"
            android:ems="10"
            tools:ignore="MissingConstraints"
            android:maxLines="1"
            android:hint="@string/concepto"/>
        <LinearLayout
            android:id="@+id/Primer_vencimiento"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/fecha_cobrarxcorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:inputType="textPersonName"
                tools:ignore="MissingConstraints"
                android:background="@drawable/border_bottom"
                android:maxLines="2"
                android:hint="@string/fecha_vto"/>
            <DatePicker
                android:id="@+id/datePicker_fecha_1"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_weight="1"
                android:id="@+id/importecobrarxcorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:ems="10"
                tools:ignore="MissingConstraints"
                android:maxLines="1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/importe"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/enviar_cobxcorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ButtonStyle,MissingConstraints"
                android:text="@string/enviar"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>